new style chat room

--- a/app/assets/stylesheets/selectizes.scss
+++ b/app/assets/stylesheets/selectizes.scss
@@ -109,7 +109,7 @@
 }
 .selectize-input,
 .selectize-control.single .selectize-input.input-active {
-  background: #ffffff;
+  // background: #ffffff;
   cursor: text;
   display: inline-block;
 }
@@ -127,7 +127,7 @@
   margin: 0;
 }
 .selectize-input.full {
-  background-color: #ffffff;
+  // background-color: #ffffff;
 }
 .selectize-input.disabled,
 .selectize-input.disabled * {
