--- a/app/assets/stylesheets/chat.scss
+++ b/app/assets/stylesheets/chat.scss
@@ -1,4 +1,7 @@
 #chat-list{
+  min-height: 100vh;
+  background: #FFF;
+  position:fixed;
   h5{
     margin: 0.4rem 0 0rem 0rem;
   }
@@ -6,18 +9,23 @@
     line-height: 3.2rem;
   }
 }
-#text-input {
-    width: 960px;
+#new_message {
+    width: 66.9%;
     padding: 10px;
     margin: 0;
     bottom: 0;
     position: fixed;
     background-color: #f3f3f3;
-    margin-left: -480px;
-    left: 50%;
+    margin-left: 0;
+    right:0;
     border-radius-top-right:.3rem;
     border-radius-top-left:.3rem;
 
+}
+.right-col-messages{
+  position: absolute;
+  right: 0;
+  min-height: 100vh;
 }
 #text-input .new {
     width: 83%;
