--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -35,7 +35,7 @@
     border-radius: .3rem;
 }
 body{
-  padding-top:64px;
+  padding-top:70px;
   background-color: #f8f8f8;
 
 }
@@ -43,13 +43,19 @@ body.vanilla-modal .modal-hider {
   position: absolute;
   left: -99999em;
 }
+main{
+  margin: 0 0.5em;
+}
 header{
     position: fixed;
     transition: top 0.2s ease-in-out;
-    width: 960px;
+    width: 100%;
     height: 64px;
-    top:20px;
+    top:0;
     z-index: 2;
+    left: 0;
+    border-radius:0;
+    border-bottom: 1px solid #e8e8e8;
 }
 
 .fixedsticky {top: 40px;}
@@ -86,12 +92,21 @@ header{
   height: 5px;
   background-color: #e51314;
 }
-.cards{
-  margin: 0 0 0 -5px;
-}
 .card {
-  width: 478px;
-  margin:0;
+  width:95%;
+}
+.white-box{
+  background:#FFF;
+  border-radius:0.3rem;
+}
+.sad-berry{
+  width: 200px;
+  margin:0 auto;
+}
+@media screen and (min-width: 800px) {
+  .card {
+    width: 32%;
+  }
 }
 
 .btn.btn-berry {
@@ -120,7 +135,7 @@ header{
     display: none;
     position: absolute;
     min-width: 160px;
-    right: 0;
+    right: 10px;
     z-index: 2;
     top: 65px;
     margin:-1rem;
