--- a/app/views/chat_rooms/show.html.erb
+++ b/app/views/chat_rooms/show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="columns">
-	<div class="column col-4">
-			<ul class="menu fixedsticky" id="chat-list">
+	<div class="column col-4" id="chat-list">
+			<ul class="menu">
 				<li class="menu-header">
 		        <span class="menu-header-text">
 		            Chat with
@@ -10,22 +10,24 @@
 	 	 		<%= render @chat_rooms %>
 	 	 	</ul>
 	</div>
-	<div class="column col-8">
+	<div class="column col-8 right-col-messages">
+		
 		<div id="messages" class="clearfix" data-chat-room-id="<%= @chat_room.id %>">
 		  <%= render @chat_room.messages %>
 		</div>
-	</div>
-</div>
+		
+		<%= form_for @message, url: '#' do |f| %>
+			<span id="typing">...</span>
+			<div id="text-input">
+		  	<%= hidden_field_tag 'chat_room_id', @chat_room.id %>
+		  	<div class="new">
+		    	<%= f.text_area :body, class: 'form-control form-input', :placeholder => "Type a message..." %>
+		  	</div>
+				<%= f.submit "Send", class: 'btn btn-primary btn-lg send' %>
+			</div>
+		<% end %>
 
-<%= form_for @message, url: '#' do |f| %>
-	<span id="typing">...</span>
-	<div id="text-input">
-  	<%= hidden_field_tag 'chat_room_id', @chat_room.id %>
-  	<div class="new">
-    	<%= f.text_area :body, class: 'form-control form-input', :placeholder => "Type a message..." %>
-  </div>
-	<%= f.submit "Send", class: 'btn btn-primary btn-lg send' %>
-<% end %>
+</div>
 
 <script>
 	window.userId = <%= current_user.id %>
