--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,41 +11,33 @@
 
   <body>
     
-    
-    <div>
-      <div class="container grid-960">
-        <div class="columns">
-          <div class="column col-12">
-                <header class="navbar bg-white">
-                    <section class="navbar-section">
-                      <%= link_to root_path do %>
-                        <%=  image_tag("berryhoop.png", class: "logo")  %> 
-                      <% end %>
-                    </section>
-                    <section class="navbar-section">
-                        <input class="form-input input-inline" type="text" placeholder="search">
-                    
-                        <%= active_link_to 'Berries', chat_rooms_path, :active => :exclusive, class: "btn btn-link" %>      
-                          <% if user_signed_in? %>
-                              <div class="dropdown">
-                                  <figure class="avatar ml-10 mr-10">
-                                    <img onclick="myFunction()" src="<%= current_user.picture %>" class="dropbtn avatar">
-                                  </figure>
-                                <div id="myDropdown" class="dropdown-content bg-grey">
-                                  <%= active_link_to 'Add berries', berries_user_path(current_user), :active => :exclusive %>
-                                  <%= active_link_to 'Edit profile', edit_user_path(current_user), :active => :exclusive %>
-                                   <%= link_to('Logout', destroy_user_session_path, :method => :delete)%>
-                                </div>
-                              </div>        
-                          <% else %>
-                            <%= link_to('Login', new_user_session_path, class: "btn btn-primary")  %>  
-                          <% end %>
-                    </section>
-                </header>
-            </div>
-          </div>
-
+     <header class="navbar bg-white">
+          <section class="navbar-section">
+            <%= link_to root_path do %>
+              <%=  image_tag("berryhoop.png", class: "logo")  %> 
+            <% end %>
+          </section>
+          <section class="navbar-section">          
+              <%= active_link_to 'Messages', chat_rooms_path, :active => :exclusive, class: "btn btn-link" %>      
+                <% if user_signed_in? %>
+                    <div class="dropdown">
+                        <figure class="avatar ml-10 mr-10">
+                          <img onclick="myFunction()" src="<%= current_user.picture %>" class="dropbtn avatar">
+                        </figure>
+                      <div id="myDropdown" class="dropdown-content bg-grey">
+                        <%= active_link_to 'Add berries', berries_user_path(current_user), :active => :exclusive %>
+                        <%= active_link_to 'Edit profile', edit_user_path(current_user), :active => :exclusive %>
+                         <%= link_to('Logout', destroy_user_session_path, :method => :delete)%>
+                      </div>
+                    </div>        
+                <% else %>
+                  <%= link_to('Login', new_user_session_path, class: "btn btn-primary")  %>  
+                <% end %>
+          </section>
+      </header>
+      
           <% if notice || alert %>
+            <div class="container grid-960">
             <div class="columns">
               <div class="column col-5">
                   <% if notice %>
@@ -62,14 +54,12 @@
                   <% end %>
               </div>
             </div>
+            </div>
           <% end %>
-      </div>
-      <%= content_for :heading %>
-    </div>
 
-    <div class="container grid-960">
-      <%= yield %>
-    </div>
+      <main content>
+        <%= yield %>
+      </main>
 
   </body>
 </html>
