new login layout

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -24,6 +24,11 @@
 .logo{
 	width: 110px;
 }
+.logo-login{
+  width: 150px;
+  margin:-10px auto 20px  auto;
+  display: block;
+}
 .bg-grey {
     background-color: #efefef;
     padding: 1rem;
