--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Noc</title>
+    <title>Berry Hoop</title>
+    <meta name="description" content="Berry helps you to connect with people that share your same interests :)">
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     
