--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Noc</title>
-    <%= csrf_meta_tags %>
-    <%= action_cable_meta_tag %>
-    
+    <title>Berry Hoop</title>
+    <meta name="description" content="Berry helps you to connect with people that share your same interests :)">
+    <%= csrf_meta_tags %>    
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -30,7 +29,7 @@
           </div>
           </div>
         <% end %>
-      
+
       <main content>
         <%= yield %>
       </main>
