--- a/app/views/tags/_list.html.erb
+++ b/app/views/tags/_list.html.erb
@@ -1,5 +1,7 @@
-<% tags.each do |tag| %>
-	<div class="chip-sm">
-	    <span class="chip-name"><%= tag %></span>
-	</div>
+<% if !tags.nil? %>
+	<% tags.split(',').each do |tag| %>
+		<div class="chip-sm">
+		    <span class="chip-name"><%= tag %></span>
+		</div>
+	<% end %>
 <% end %>
