--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -2,7 +2,7 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <%= f.label :email, class: "form-label" %>
     </div>
     <div class="col-sm-8">
@@ -11,16 +11,15 @@
   </div>
 
   <div class="form-group">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <%= f.label :username, class: "form-label" %>
     </div>
     <div class="col-sm-8">
       <%= f.text_field :username, class: "form-input" %>
     </div>
   </div>
-
   <div class="form-group">
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <%= f.label :password, class: "form-label" %>
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -30,18 +29,25 @@
       <%= f.password_field :password, autocomplete: "off", class: "form-input" %>
     </div>
   </div>
-
   <div class="form-group">
-    <div class="col-sm-4">
-      <%= f.label :password_confirmation, class: "form-label" %>
+    <div class="col-sm-3">
+        <%= f.label :gender, class: "form-label" %>
     </div>
     <div class="col-sm-8">
-      <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-input" %>
+        <label class="form-radio">
+          <%= f.radio_button :gender, 'm' %> 
+          <i class="form-icon"></i>
+          <%= f.label :gender, 'Male', :value => 'm' %>
+        </label>
+        <label class="form-radio">
+          <%= f.radio_button :gender, 'f' %> 
+          <i class="form-icon"></i>
+          <%= f.label :gender, 'Female', :value => 'f' %>
+        </label>
     </div>
   </div>
-
   <div class="form-group" data-no-turbolink>
-    <div class="col-sm-4"></div>
+    <div class="col-sm-3"></div>
     <div class="col-sm-8">
       <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
     </div>
