--- a/app/views/users/berry.html.erb
+++ b/app/views/users/berry.html.erb
@@ -1,3 +1,4 @@
+<div class="container grid-960">
 <div class="columns">
 	<div class="column col-9 centered">
 		<h4>Hi <%= current_user.name %>, add some <b>berries</b> to your profile , the berries are tags that identify you for who you are and what you enjoy <br>doing in life. They will help you to connect with others people.<br> <div class="berry-tag chip-sm">Surf</div> for example <div class="berry-tag chip-sm">Code</div> or <div class="berry-tag chip-sm">Food</div> and even <div class="berry-tag chip-sm">Startup</div>.</h4>
@@ -14,6 +15,7 @@
 
 	</div>
 </div>
+</div>
 
 
 <script>
@@ -26,7 +28,7 @@
 					maxItems: 10,
 					create: true,
 					openOnFocus:false,
-					delimiter: ' '
+					delimiter: ','
 				});
 	});
 </script>
