--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -53,7 +53,14 @@
 	          			<%= f.text_area :about, :maxlength => 512, :size => 100, placeholder: "Write here something you would like to do in your life.", class:"form-input" %>
 	            </div>
 	        </div>
-	        <br>
+          <div class="form-group">
+        			<div class="col-sm-3">
+    						<label>UPLOAD PICTURE:</label>
+	            </div>
+	            <div class="col-sm-9">
+	          			<%= f.file_field :avatar, class: "form-input" %>
+	            </div>
+					</div>
 	        <div class="form-group">
 	            <div class="col-sm-3"></div>
 	            <div class="col-sm-9">
