--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -2,54 +2,25 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <div class="col-sm-3">
-      <%= f.label :email, class: "form-label" %>
-    </div>
-    <div class="col-sm-8">
-      <%= f.email_field :email, autofocus: true, class: "form-input" %>
-    </div>
+    <%= f.email_field :email, autofocus: true, placeholder: "Email", class: "form-input" %>
   </div>
 
   <div class="form-group">
-    <div class="col-sm-3">
-      <%= f.label :username, class: "form-label" %>
-    </div>
-    <div class="col-sm-8">
-      <%= f.text_field :username, class: "form-input" %>
-    </div>
+    <%= f.text_field :username, placeholder: "Full name", class: "form-input" %>
   </div>
+
   <div class="form-group">
-    <div class="col-sm-3">
-      <%= f.label :password, class: "form-label" %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %>
-    </div>
-    <div class="col-sm-8">
-      <%= f.password_field :password, autocomplete: "off", class: "form-input" %>
-    </div>
+    <%= f.password_field :password, autocomplete: "off",placeholder: "Password", class: "form-input" %>
   </div>
-  <div class="form-group">
-    <div class="col-sm-3">
-        <%= f.label :gender, class: "form-label" %>
-    </div>
-    <div class="col-sm-8">
-        <label class="form-radio">
-          <%= f.radio_button :gender, 'm' %> 
-          <i class="form-icon"></i>
-          <%= f.label :gender, 'Male', :value => 'm' %>
-        </label>
-        <label class="form-radio">
-          <%= f.radio_button :gender, 'f' %> 
-          <i class="form-icon"></i>
-          <%= f.label :gender, 'Female', :value => 'f' %>
-        </label>
-    </div>
+  <div class="form-group form-radio-btn">
+      <%= f.radio_button :local, true %>
+      <%= f.label :local, 'Local', :value => true, class: "left" %>
+      <%= f.radio_button :local, false %> 
+      <%= f.label :local, 'New comer', :value => false, class: "right" %>
   </div>
-  <div class="form-group" data-no-turbolink>
-    <div class="col-sm-3"></div>
-    <div class="col-sm-8">
+  <br>
+  <div class="form-group float-right" data-no-turbolink>
       <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
-    </div>
   </div>
+  <div class="clearfix"></div>
 <% end %>
