--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,12 @@
+<% content_for :body_class, "welcome" %>
+
 <div class="container grid-960">
   <section class="sign-up columns">
-    <div class="column col-7">
-      <h1 class="mb-0">Beeries are in town.</h1>
-      <h4 class="mt-10">Berry helps you to connect with people that share your same interests.</h4>
-      <%=  image_tag("berry-sign-up.png", class: "sign-up-image")  %> 
-    </div>
-    <div class="column col-5">
+    <div class="column col-7"></div>
+    <div class="column col-5 sign-box">
       <h2 class="text-bold">Create a new account <span>It's free!</span></h2>
-      <%= render "form" %>
+      <%= render "devise/registrations/form" %>
     </div>
   </section>
 </div>
+
