--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Berry Hoop</title>
+    <title>Blendin</title>
     <meta name="description" content="Berry helps you to connect with people that share your same interests :)">
+    <meta name="viewport" content="width=device-width">
+ 
     <%= csrf_meta_tags %>
     <%= action_cable_meta_tag %>
     
@@ -10,36 +12,10 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    
-     <header class="navbar bg-white">
-          <section class="navbar-section">
-            <%= link_to root_path do %>
-              <%=  image_tag("berryhoop.png", class: "logo")  %> 
-            <% end %>
-          </section>
-          <section class="navbar-section search-section">
-            <%= yield :search %>
-          </section>
-          <section class="navbar-section">          
-                <% if user_signed_in? %>
-                    <%= active_link_to 'Messages', chat_rooms_path, :active => :exclusive, class: "btn btn-link" %>      
-                    <div class="dropdown">
-                        <figure class="avatar ml-10 mr-10">
-                          <img onclick="myFunction()" src="<%= current_user.picture %>" class="dropbtn avatar">
-                        </figure>
-                      <div id="myDropdown" class="dropdown-content bg-grey">
-                        <%= active_link_to 'Add berries', berries_user_path(current_user), :active => :exclusive %>
-                        <%= active_link_to 'Edit profile', edit_user_path(current_user), :active => :exclusive %>
-                         <%= link_to('Logout', destroy_user_session_path, :method => :delete)%>
-                      </div>
-                    </div>        
-                <% else %>
-                  <%= link_to('Login', new_user_session_path, class: "btn btn-primary")  %>  
-                <% end %>
-          </section>
-      </header>
-      
+  <body class="overlord loaded <%= yield (:body_class) %>">
+          
+          <%= render partial: "nav/main_nav" %>
+
           <% if notice || alert %>
             <div class="container grid-960">
             <div class="columns">
