--- a/app/assets/stylesheets/spectre.scss
+++ b/app/assets/stylesheets/spectre.scss
@@ -1920,8 +1920,7 @@ textarea.form-input {
   color: #fff;
 }
 .toast.toast-danger {
-  background: #e85600;
-  border-color: #de5200;
+  background: #ff0000;
   color: #fff;
 }
 .toast.toast-primary .btn-clear,
