--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -18,7 +18,7 @@
       <%= f.radio_button :local, false %> 
       <%= f.label :local, 'New comer', :value => false, class: "right" %>
   </div>
-  <br>
+  <p class="terms-text">By clicking Sign Up, you agree to our <a href="">Terms</a> and that you have read our <a href="">Data Policy</a>.</p>
   <div class="form-group float-right" data-no-turbolink>
       <%= f.submit "Sign up", class: "btn btn-primary btn-lg" %>
   </div>
