--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,7 +2,10 @@
 
 <div class="container grid-960">
   <section class="sign-up columns">
-    <div class="column col-7"></div>
+    <div class="column col-7 headline">
+    	<h2>We are one</h2>
+    	<p>Where refugees and locals can meet.</p>
+    </div>
     <div class="column col-5 sign-box">
       <h2 class="text-bold">Create a new account <span>It's free!</span></h2>
       <%= render "devise/registrations/form" %>
