--- a/app/assets/stylesheets/search-bar.scss
+++ b/app/assets/stylesheets/search-bar.scss
@@ -2,7 +2,7 @@
     background: #FFF;
     position: absolute;
     top: 25px;
-    left: 235px;
+    left: 16.3em;
     width: 60%;
     background: rgba(255,255,255,0.9);
     border: 1px solid rgba(0,0,0,0);
