--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -13,9 +13,9 @@
     <%= f.password_field :password, autocomplete: "off",placeholder: "Password", class: "form-input" %>
   </div>
   <div class="form-group form-radio-btn">
-      <%= f.radio_button :local, true %>
+      <%= f.radio_button :local, true, :checked => false %>
       <%= f.label :local, 'Local', :value => true, class: "left" %>
-      <%= f.radio_button :local, false %> 
+      <%= f.radio_button :local, false, :checked => false %> 
       <%= f.label :local, 'New comer', :value => false, class: "right" %>
   </div>
   <p class="terms-text">By clicking Sign Up, you agree to our <a href="">Terms</a> and that you have read our <a href="">Data Policy</a>.</p>
