--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -2,7 +2,7 @@
 
 nav#overlord {
     display: block;
-    position: absolute;
+    position: fixed;
     left: 0px;
     top: 0px;
     right: 0px;
