--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -1,9 +1,9 @@
 #filter-column{
+  position: fixed;
   width: 15em;
-  float: left;
-  min-height: 100vh;
+  min-height: 100%;
   background: #FFF;
-  margin-top: -5em;
+  top: 0;
   padding-top: 5em;
   border-right: 1px solid #f2f2f2;
   overflow: hidden;
@@ -22,11 +22,28 @@
       border-radius:0.3rem;
       cursor: pointer;
       border:2px solid transparent;
+      &:first-child{
+        margin-top: 0;
+      }
       &:hover{
         border:2px solid #74CED2;
       }
       &.active{
         border:2px solid #74CED2;
+      }
+      p{
+        display:inline-block;
+        margin:0; padding:0; 
+      }
+      span{
+        float: right;
+        border-radius: 0.3rem;
+        background: #FFF;
+        border: 1px solid #cecece;
+        font-size: 12px;
+        padding: 0.2rem 0.5rem;
+        line-height: 14px;
+        margin-top: 0.1rem;
       }
     }
   }
