--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,48 +9,34 @@
 <div id="filter-column" data-selected="<%= params[:berries] %>">
 	<ul>
 	  <% @tag_list.each do |tag| %>
-	    <li style="background-color: <%= tag.tint %>; display: inline-block;">
-	      <%= tag.name %>
-	    </li>
+	    <li><p><%= truncate(tag.name, length: 15) %></p><span><%= tag.count %></span></li>
 	  <% end %>
 	</ul>
 </div>
 
-<div class="columns">
-	<div class="column cards">
+<div id="center-side" class="container">
 		<% @users.each do |user| %>
-			<div class="card mb-5">
-		      
-		      <div class="card-header">
-		      		<div class="chip">
-		              <div class="chip-icon">
-		                  <img src="<%= user.picture.medium_avatar %>" class="avatar avatar-modal" data-image="<%= user.picture %>">
-		              </div>
-		              <div class="chip-content">
-		                <h4 class="card-title"><%= user.name %></h4>
-		                <h6 class="card-meta">Software and hardware</h6>
-		              </div>
-		          </div>
-
-		      </div>
-		      
-		      <div class="card-body">
-		         <%= user.about %>
-		      </div>
-		      
-		      <div class="card-footer clearfix">
-            <%= render partial: "tags/list", locals: {tags: user.cached_tag_list} %>
-            <div class="float-right">
-		      		  <% if !current_user.likes(user) %>					  
-					    			 <%= link_to like_knok_path(user), class: 'btn btn-sm btn-berry', method: :put, remote: true do %>
-	                    <span class="icon icon-berry"></span> berry
-	                  <% end %>	
+	        <div class="card">
+	            <div class="card-image">
+	                <img class="img-responsive" src="<%= user.avatar.large_avatar %>">
+	            		<div class="shape"></div>
+	            </div>
+	            <div class="card-header">
+	                <h4 class="card-title"><%= user.name %></h4>
+	                <h6 class="card-meta">Software and hardware</h6>
+	            </div>
+		          <div class="card-footer">		
+		          	<% if !current_user.likes(user) %>		
+					    			 <%= link_to "Blend", like_knok_path(user), class: 'btn btn-sm', method: :put, remote: true %>
+								<% else %>
+										<%= link_to "Blend", like_knok_path(user), class: 'btn btn-sm', method: :put, remote: true %>
 								<% end %>
-		      		</div>
-			    </div>
-		  </div>
+  	          </div>
+	        </div>
 		<% end %>
-	</div>
+</div>
+<div id="right-side" class="container">
+
 </div>
 
 <script>
